awesome_library/src/components/BookCard.css
.searchResults {
  cursor: pointer;
  color: black;
  font-size: 20px;
  padding: 10px;
  margin-bottom: 15px;
  border: 3px solid black;
  text-align: center;
  margin-left: 5px;
  margin-right: 2px;
  background-image: url("../images/halftonepattern.png");
  box-shadow: -3px 3px black;
  transition: margin 0.2s ease-in-out;
  max-width: 100%;
}

.searchResults:hover {
  margin-left: 7px;
  margin-right: 0px;
}

.searchResultsUnavailable {
  cursor: pointer;
  color: black;
  font-size: 20px;
  padding: 10px;
  margin-bottom: 15px;
  border: 3px solid black;
  text-align: center;
  margin-left: 5px;
  margin-right: 2px;
  background-image: url("../images/halftonepattern.png");
  box-shadow: -3px 3px black;
  transition: margin 0.2s ease-in-out;
  max-width: 100%;
  filter: grayscale(100%);
}

.searchResultsUnavailable:hover {
  margin-left: 7px;
  margin-right: 0px;
}

.close-btn {
  margin: 25px;
  width: 30px;
  height: 30px;
  border: none;
  position: absolute;
  top: 0;
  right: 0;
  font-weight: bold;
  border-radius: 2px;
  border: 3px solid black;
  background-color: rgb(67, 202, 255);
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.24), 0 2px 3px 0 rgba(0, 0, 0, 0.19);
  cursor: pointer;
}

.header {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.header p {
  margin: 0px;
}

.header h3 {
  margin: 3px 0px 3px 0px;
}

.book-info p {
  text-align: justify;
}

.borrow-btn {
  font-size: 15px;
  color: rgb(0, 0, 0);
  font-family: "Bangers", cursive;
  letter-spacing: 3px;
  text-shadow: -2px 1px rgb(255, 255, 255);
  border-radius: 2px;
  border: 3px solid black;
  background-color: rgb(246, 51, 29);
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.24), 0 2px 3px 0 rgba(0, 0, 0, 0.19);
  cursor: pointer;
  padding: 5px 15px;
  margin-left: 15px;
}

.bookStatus {
  display: flex;
  flex-direction: column;

  align-items: center;
  letter-spacing: 1px;
}

.copy-card {
  width: 30vw;
  background-color: rgb(49, 141, 253);
  border: 3px solid black;
  margin-bottom: 15px;
  box-shadow: -3px 3px black;
  color: white;

  /* background-image: url("../images/halftonepattern.png"); */
  /* maybe? */
}

/* .copy-card p {
  font-size: 20px;
} */

.borrowedBook {
  width: 50vw;
  background-color: rgb(49, 141, 253);
  border: 3px solid black;
  border-radius: 2px;
  box-shadow: -3px 3px black;
  margin: 3px;
  padding: 3px;
}

.returnButton {
  font-size: 20px;
  color: rgb(0, 0, 0);
  font-family: "Bangers", cursive;
  letter-spacing: 3px;
  text-shadow: -2px 1px rgb(255, 255, 255);
  border-radius: 2px;
  border: 3px solid black;
  background-color: rgb(254, 201, 28);
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.24), 0 2px 3px 0 rgba(0, 0, 0, 0.19);
  cursor: pointer;
  margin-bottom: 15px;
  padding: 5px 15px;
}

.renewButton {
  font-size: 20px;
  color: rgb(0, 0, 0);
  font-family: "Bangers", cursive;
  letter-spacing: 3px;
  text-shadow: -2px 1px rgb(255, 255, 255);
  border-radius: 2px;
  border: 3px solid black;
  background-color: rgb(254, 201, 28);
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.24), 0 2px 3px 0 rgba(0, 0, 0, 0.19);
  cursor: pointer;
  padding: 5px 15px;
  margin: 15px;
}

.lateWarning {
  font-weight: bold;
  color: rgb(255, 255, 100);
  text-shadow: -2px 1px rgb(255, 0, 0);
  margin: 15px;
}

.not-logged-book {
  width: 30vw;
  padding: 15px 0 15px 0;
  background-color: rgb(49, 141, 253);
  border: 3px solid black;

  margin-bottom: 15px;
  color: white;
  box-shadow: -3px 3px black;
}

.unavailable-copy {
  width: 30vw;
  background-color: rgb(232, 90, 111);
  border: 3px solid black;
  margin-bottom: 15px;
  color: rgb(42, 40, 40);
  box-shadow: -3px 3px black;
}

@media (max-width: 650px) {
  .book-description {
    display: none;
  }

  .book-card {
    width: 80vw;
  }

  .unavailable-copy {
    width: inherit;
  }

  .not-logged-book {
    width: 80vw;
  }

  .bookStatus {
    width: 80vw;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
  }

  .header {
    margin-top: 35px;
  }

  .copy-card {
    width: 80vw;
  }

  .renewButton {
    width: 80%;
    margin: 0;
    margin-bottom: 10px;
  }

  .returnButton {
    width: 80%;
  }

  .borrowedBook {
    width: 80vw;
  }
}

